terms done, final design touches - v1

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>GIFs Finder</title>
-    <meta name="description" content="A React Redux Web App for finding GIFs using the Giphy API">
+    <meta name="description" content="A React Redux Web App for finding GIFs using the Giphy API" />
+    <link href="https://fonts.googleapis.com/css?family=Fugaz+One|Oxygen" rel="stylesheet" />
   </head>
   <body>
     <main class="root"></main>
